BuildHughes/translation-tool/inputs/source_meta/objects/Location_Order_LineItem_SO_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>ALU_Prod_Name__c</fullName>
        <label>ALU Prod Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Category__c</fullName>
        <label>Billing Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_PO_Number__c</fullName>
        <label>Billing PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <formula>TEXT(Related_Billing_Spec_SO_Map__r.DSS_Svc_Offering__r.Billing_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <label>Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Amount_Duration_in_Months__c</fullName>
        <label>Credit Amount Duration (in Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <label>Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VALUE</fullName>
                </value>
                <value>
                    <fullName>PERCENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSS_Package_Name__c</fullName>
        <description>Actual value of DSS Package Name</description>
        <label>DSS Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Plan_Name__c</fullName>
        <description>Actual value of DSS Plan Name</description>
        <label>DSS Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Program_Code__c</fullName>
        <label>DSS Program Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSS_Svc_Offering__c</fullName>
        <description>Actual value of DSS Service Offering Name</description>
        <label>DSS Svc Offering</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donot_Cancel_On_Terminate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donot Cancel On Terminate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Charges_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Charges in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <label>Invoice Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_ID__c</fullName>
        <label>Invoice ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Invoice_Identifier__c</fullName>
        <label>Leasing Invoice Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Order_LineItem_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Order LineItem Product</label>
        <referenceTo>Location_Order_LineItem_Prod__c</referenceTo>
        <relationshipLabel>Location Order LineItem SO Mappings</relationshipLabel>
        <relationshipName>Location_Order_LineItem_SO_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Order_LineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Order LineItem</label>
        <referenceTo>Location_Order_LineItem__c</referenceTo>
        <relationshipLabel>Location Order LineItem SO Mappings</relationshipLabel>
        <relationshipName>Location_Order_LineItem_SO_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Billing_Deal__c</fullName>
        <label>Override Billing Deal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Price__c</fullName>
        <label>Override Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portal_Invoice_Identifier__c</fullName>
        <label>Portal Invoice Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Billing_Spec_SO_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Billing Spec SO Map</label>
        <referenceTo>Customer_Billing_Spec_SOMap__c</referenceTo>
        <relationshipLabel>Location Order LineItem SO Mappings</relationshipLabel>
        <relationshipName>Location_Order_LineItem_SO_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Billing_Spec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Billing Spec</label>
        <referenceTo>Customer_Billing_Spec_Template__c</referenceTo>
        <relationshipLabel>Location Order LineItem SO Mappings</relationshipLabel>
        <relationshipName>Location_Order_LineItem_SO_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Token_Bandwidth__c</fullName>
        <label>Token Bandwidth (MB)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WBS__c</fullName>
        <label>WBS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Location Order LineItem SO Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LISOMAP-{0000000000}</displayFormat>
        <label>Location Order LineItem SO Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Order LineItem SO Mappings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>